Investor Dashboard all python based, final version 20 Aug 2025, ready for user test experience, V4

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3"><a class="nav-link" href="#">About</a></li>
         <li class="nav-item me-3"><a class="nav-link" href="{{ url_for('fund') }}">Fund</a></li>
-        <li class="nav-item me-3"><a class="nav-link" href="#">Risk Management Services</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="#">Research</a></li>
 
         <!-- Always show Client Portal -->
         <li class="nav-item me-3"><a class="nav-link" href="{{ url_for('client_portal') }}">Client Portal</a></li>
