Updated the dashboard to have all fees included, checked for Dr. Alavian,Salim,Pirooz,Golestani V2

--- a/templates/client_portal.html
+++ b/templates/client_portal.html
@@ -23,7 +23,7 @@
       <div class="fund-details">
         <h4>Welcome back, Dear {% if investor_name %} {{ investor_name }}{% endif %}</h4>
         <p class="text-muted mb-4 text-justify">
-          Thanks for being with us, hear is your personalized investment report.
+          Thanks for being with us, here is your personalized investment report.
         </p>
 
         <h4>Key Features</h4>
