Weekly updates for investors 31 Aug 2025

--- a/templates/client_portal.html
+++ b/templates/client_portal.html
@@ -37,7 +37,7 @@
 
         
         <h4>Performance Metrics</h4>
-          <div class="metrics-grid">
+          <div class="metrics-grid small">
             <div class="metric-item">
               <span class="metric-label">YTD Fund Return (Before fees):</span>
               <span class="metric-value text-success">
