--- a/templates/fund.html
+++ b/templates/fund.html
@@ -78,8 +78,8 @@
           </div>
         </div>
       </div>
-      <div class="chart-area">
-        <canvas id="fundChart"></canvas>
+      <div class="chart-area" style="min-height:260px; height:500px; margin-bottom:0;">
+        <canvas id="fundChart" style="width:100%; height:100%;"></canvas>
       </div>
     </div>
   </div>
